[gd_scene load_steps=5 format=2]

[ext_resource path="res://mini/pitfall/images/obstacles/gator/closed.png" type="Texture" id=1]
[ext_resource path="res://mini/pitfall/scripts/obstacles/gator.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 2 )

[node name="Gator" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -4.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision = true

[node name="Head" type="Area2D" parent="."]
position = Vector2( 0, -4 )
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
[connection signal="body_exited" from="Head" to="." method="_on_Head_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
